test/corpus/definitions_enum.txt
==================
Top-level enum definition
==================

enum Status {
  Pending,
  Active,
  Completed
}

---
(source_file
  (enum_definition
    name: (identifier)
    value: (identifier)
    value: (identifier)
    value: (identifier)))

==================
Enum inside a contract
==================

contract C {
  enum MyEnum { Value1, Value2 }
}

---
(source_file
  (contract_definition
    name: (identifier)
    body: (contract_body
      (enum_definition
        name: (identifier)
        value: (identifier)
        value: (identifier)))))
