test/corpus/functions.txt
==================
Simple function
==================
contract C {
  function myFunc() {}
}
---
(source_file
  (contract_definition
    name: (identifier)
    body: (contract_body
      (function_definition
        name: (identifier)
        parameters: (parameter_list)
        body: (block)))))

==================
Function with parameters, attributes, and returns
==================
contract C {
  function getValue(uint256 id) public view virtual returns (bool success) {}
}
---
(source_file
  (contract_definition
    name: (identifier)
    body: (contract_body
      (function_definition
        name: (identifier)
        parameters: (parameter_list
          (parameter_declaration
            type: (type_name (elementary_type_name))
            name: (identifier)))
        (visibility)
        (state_mutability)
        (returns_clause
          returns: (parameter_list
            (parameter_declaration
              type: (type_name (elementary_type_name))
              name: (identifier))))
        body: (block)))))

==================
Interface function
==================
interface IMyContract {
  function getSomething() external returns (address);
}
---
(source_file
  (interface_definition
    name: (identifier)
    body: (contract_body
      (function_definition
        name: (identifier)
        parameters: (parameter_list)
        (visibility)
        (returns_clause
          returns: (parameter_list
            (parameter_declaration
              type: (type_name (elementary_type_name)))))
        body: (empty_body)))))
