test/corpus/imports.txt
==================
Simple import
==================

import "./MyFile.sol";

---

(source_file
  (import_directive
    path: (string_literal)))

==================
Import with alias
==================

import * as MyLib from "./MyLib.sol";

---

(source_file
  (import_directive
    alias: (identifier)
    path: (string_literal)))

==================
Import with destructured symbols
==================

import {symbol1, symbol2 as alias2} from "./MyFile.sol";

---

(source_file
  (import_directive
    symbols: (symbol_aliases
      (import_alias
        symbol: (identifier))
      (import_alias
        symbol: (identifier)
        alias: (identifier)))
    path: (string_literal)))
