test/corpus/pragmas.txt
==================
Pragma with exact version
==================

pragma solidity 0.8.4;

---

(source_file
  (pragma_directive
    name: (identifier)
    value: (version_constraint
      (version_literal))))

==================
Pragma with caret version
==================

pragma solidity ^0.6.0;

---

(source_file
  (pragma_directive
    name: (identifier)
    value: (version_constraint
      (version_operator)
      (version_literal))))

==================
Pragma with multiple version constraints
==================

pragma solidity >=0.8.0 <0.9.0;

---

(source_file
  (pragma_directive
    name: (identifier)
    value: (version_constraint
      (version_operator)
      (version_literal))
    value: (version_constraint
      (version_operator)
      (version_literal))))